# placeholder_translation

./: README.md  cli.py  pyproject.toml
commands/: __init__.py  evaluate_model.py  train_spm.py  translate.py
configs/: baseline.jsonnet  code-switching.jsonnet  code-switching_lemma.jsonnet  placeholder.jsonnet  placeholder_morph.jsonnet  proposed.jsonnet  proposed_from_pretrained.jsonnet
configs/lib/: base.libsonnet  data.libsonnet  transformer_base.libsonnet  word_tokenized_data.jsonnet
data/ASPEC-JE-word-dictionary/: word-dictionary-noun.devtest-seen.tsv  word-dictionary-noun.devtest-unseen.tsv  word-dictionary-noun.train.tsv  word-dictionary-verb-filtered.tsv  word-dictionary-verb.devtest-seen.tsv  word-dictionary-verb.devtest-unseen.tsv  word-dictionary-verb.train.tsv
models/: inflectional_placeholder_seq2seq.py  placeholder_pos_seq2seq.py  placeholder_seq2seq.py  seq2seq.py  sequence_generator.py  utils.py
models/callbacks/: log_tokens.py
models/dataset_reader/: placeholder_seq2seq_reader.py  seq2seq_reader.py
models/dataset_reader/file_parsers/: __init__.py  file_parser_base.py  parallel_file_parsers.py
models/dataset_reader/filterer/: __init__.py  (+1 more)
models/metrics/: loss_to_perplexity.py  sacre_bleu.py  target_translation.py
models/modules/: sampling.py  sequence_cross_entropy.py
models/placeholder/: dictionary.py  word_replacer.py
models/tokenizers/: __init__.py  char_tokenizer.py  mecab_tokenizer.py  sp_tokenizer.py
preprocessing/: README.md  extract_phrase_table.py  filter_verb_dictionary.py  make_dictionary.py  make_dictionary_split.py
(+11 files in other folders)
