[tool.black]
line-length = 120

[tool.poetry]
name = "placeholder_translation"
version = "0.1.0"
description = ""
authors = ["linghan <ryou0634@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp = "2.0.1"
lemminflect = "^0.2.2"
sentencepiece = "^0.1.95"
marisa-trie = "^0.7.5"
sacrebleu = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
